--- a/projects.html
+++ b/projects.html
@@ -1,46 +1,64 @@
 <!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
-<meta charset="utf-8" />
-<title>My projects</title>
-<link href="profileStyle.css" rel="stylesheet">
+    <meta charset="utf-8" />
+    <title>My projects</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="profileStyles.css" rel="stylesheet">
+
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.2/lib/p5.js" defer></script>
+    <script src="src/balloon.js" defer></script>
+    <script src="src/game.js" defer></script>
 </head>
-<body>
-<nav>
-<ul>
-<li><a href="index.html">Go to profile</a></li>
-<li><a href="projects.html">Go to projects</a></li>
-<li><a href="https://www.linkedin.com/in/peter-bellaby-40b93022b/" target="_blank">My LinkedIn</a></li>
-</ul>
-</nav>
-<section>
-<h1>Projects</h1>
-<table>
-<thead>
-<tr>
-<th>Project Name</th>
-<th>Description</th>
-<th>Year</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>Agile Project</td>
-<td>Did some stuff with user stories</td>
-<td>2023</td>
-</tr>
-<tr>
-<td>Safari Park Project</td>
-<td>Demonstrated polymorphism</td>
-<td>2023</td>
-</tr>
-</tbody>
-</table>
-</section>
-<section>
-<h2>Javascript Game</h2>
-<!-- We will implement this in the JavaScript lesson -->
-</section>
+
+<body onload=greeting() class="container">
+    <nav class="flex-container">
+        <a class="navigation" href="index.html">Go to profile</a>
+        <a class="navigation" id="current" href="projects.html" target="_blank">Go to projects</a>
+        <a class="navigation" href="https://www.linkedin.com/in/matthew-d-handley" target="_blank">My LinkedIn</a>
+        <a class="navigation" href="https://github.com/MHandley10/" targe="_blank">My Github</a>
+    </nav>
+    <section>
+        <h1 id="projectHeading">Projects</h1>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Project Name</th>
+                    <th>Description</th>
+                    <th>Year</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><a href="https://github.com/MHandley10/Tech211/tree/main/Week%203/FizzBuzz" class="gitLink">FizzBuzz</a></td>
+                    <td>A program that generates a list of numbers. Numbers divisible by 3 are replaced by the word Fizz, divisible by 5 replaced by Buzz and both replaced by FizzBuzz</td>
+                    <td>2023</td>
+                </tr>
+                <tr>
+                    <td><a href="https://github.com/MHandley10/SortManager" class="gitLink">SortManager</a></td>
+                    <td>A console application where a user can select the size of a List of numbers to sort and the type of sort they want to use (e.g. bubble, merge)</td>
+                    <td>2023</td>
+                </tr>
+                <tr>
+                    <td><a href="https://github.com/coffeeandcodee/Room2_NorthwindAPI" class="gitLink">Northwind API</a></td>
+                    <td>A web API developed using ASP.NET and the Northwind database capable of performing GET, PUT, POST and DELETE operations</td>
+                    <td>2023</td>
+                </tr>
+                <tr>
+                    <td><a href="https://github.com/coffeeandcodee/Room3_SouthwindExcercise" class="gitLink">Southwind Project</a></td>
+                    <td>Demonstrates creating a Model-first database using the Entity-Framework</td>
+                    <td>2023</td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
+    <section id="game-container">
+        <h2 id="game-title">Javascript Game</h2>
+        <p>Score: <span id="score">0</span></p>
+    </section>
 </body>
+
 </html>
