tweaked CSS again

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body class="container">
     <nav class="flex-container">
-        <a class="navigation" id="current" href="index.html">Go to profile</a>
+        <a class="navigation" href="index.html">Go to profile</a>
         <a class="navigation" href="projects.html" target="_blank">Go to projects</a>
         <a class="navigation" href="https://www.linkedin.com/in/matthew-d-handley" target="_blank">My LinkedIn</a>
         <a class="navigation" href="https://github.com/MHandley10/" targe="_blank">My Github</a>
